<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PlaceLocator</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_use_current_location">User current location</string>
    <string name="menu_contact_admin">Contact administrator</string>
    <string name="menu_settings">Setting</string>
    <string name="rating_images">Rating images</string>
   
    <string name="title_activity_main">MainActivity</string>
     
    <string name="pref_place_info">Place Info</string>
    <string name="pref_place_name">Name</string>
    <string name="pref_place_address">Address</string>
    <string name="pref_place_phone">Phone</string>
    <string name="pref_place_machines">Machines</string>
    
    <string name="pref_public_notes">Public Notes</string>
    
    <string name="pref_add_a_rating">Add a rating</string>
    <string name="pref_rating">Rating</string>
    
	<string name="pref_feed_back">Feed Back</string>
	
	<string name="pref_info_incorrect">Information is not correct?</string>
	
	<string name="pref_how_to_contact">How can we contact you?</string>
	<string name="pref_your_name">Name</string>
	<string name="pref_your_phone_number">Phone Number</string>
	<string name="pref_your_email">E-mail</string>
	<string name="pref_leave_message">Please leave a message</string>
	<string name="pref_your_message">Your message</string>
	<string name="pref_send_message">Send</string>
	
</resources>